several new content and some style fixes but basically proted the original site.

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
+  - content
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -69,7 +70,7 @@ author:
 defaults:
   # _pages
   - scope:
-      path: "_pages"
+      path: ""
       type: pages
     values:
       layout: single
