--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ include:
   - _pages
   - content
 
+exclude:
+  - "*.xlsx"
+  - ".idea"
+  - "*.py"
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
